--- a/AUF.EMR.MVC/Views/PatientRecord/Details.cshtml
+++ b/AUF.EMR.MVC/Views/PatientRecord/Details.cshtml
@@ -10,103 +10,112 @@
 
     <div class="bg-white shadow-md rounded-lg p-8 mb-6">
         <div class="flex justify-between items-center mb-3">
-            <h1 class="text-2xl font-bold mb-3">Details</h1>
+            <div>
+                <h1 class="text-xl">Details</h1>
+                <h1 class="text-2xl font-bold text-gray-800 mb-4">Patient Record</h1>
+            </div>
 
             <div class="space-x-2 mb-3 flex justify-end">
-                <!--Print Button-->
-                <div class="flex-shrink-0 inline-block bg-blue-500 hover:bg-blue-300 text-white font-medium py-2 px-4 rounded-lg transition duration-300 ease-in-out text-sm w-28">
-                <button type="button" onclick="print('Print', 'PatientRecord', '@Model.PatientRecord.Id', '@Model.PatientRecord.PatientId')">
-                        <svg class="w-5 h-5 text-white inline-block mr-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-                            <path fill-rule="evenodd" d="M8 3a2 2 0 0 0-2 2v3h12V5a2 2 0 0 0-2-2H8Zm-3 7a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h1v-4a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v4h1a2 2 0 0 0 2-2v-5a2 2 0 0 0-2-2H5Zm4 11a1 1 0 0 1-1-1v-4h8v4a1 1 0 0 1-1 1H9Z" clip-rule="evenodd" />
+                <div class="flex justify-end mb-6 gap-3">
+                    <!--Print Button-->
+                    <div class="flex-shrink-0 inline-block bg-blue-500 hover:bg-blue-300 text-white font-medium py-2 px-4 rounded-lg transition duration-300 ease-in-out text-sm w-28">
+                        <button type="button" onclick="print('Print', 'PatientRecord', '@Model.HouseholdNo', '@Model.PatientRecord.Id', '@Model.PatientRecord.PatientId')">
+                            <svg class="w-5 h-5 text-white inline-block mr-1" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                                <path fill-rule="evenodd" d="M8 3a2 2 0 0 0-2 2v3h12V5a2 2 0 0 0-2-2H8Zm-3 7a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h1v-4a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v4h1a2 2 0 0 0 2-2v-5a2 2 0 0 0-2-2H5Zm4 11a1 1 0 0 1-1-1v-4h8v4a1 1 0 0 1-1 1H9Z" clip-rule="evenodd" />
+                            </svg>
+                            <span class="hidden md:inline font-medium">Print</span>
+                        </button>
+                    </div>
+                    <a asp-action="Edit" asp-route-id="@Model.PatientRecord.Id" asp-route-householdNo="@Model.HouseholdNo" asp-route-requestUrl="@Model.RequestUrl" class="px-5 py-2.5 text-sm font-medium text-center inline-flex items-center text-white bg-primary-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-green-200">
+                        <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                            <path fill-rule="evenodd" d="M11.32 6.176H5c-1.105 0-2 .949-2 2.118v10.588C3 20.052 3.895 21 5 21h11c1.105 0 2-.948 2-2.118v-7.75l-3.914 4.144A2.46 2.46 0 0 1 12.81 16l-2.681.568c-1.75.37-3.292-1.263-2.942-3.115l.536-2.839c.097-.512.335-.983.684-1.352l2.914-3.086Z" clip-rule="evenodd" />
+                            <path fill-rule="evenodd" d="M19.846 4.318a2.148 2.148 0 0 0-.437-.692 2.014 2.014 0 0 0-.654-.463 1.92 1.92 0 0 0-1.544 0 2.014 2.014 0 0 0-.654.463l-.546.578 2.852 3.02.546-.579a2.14 2.14 0 0 0 .437-.692 2.244 2.244 0 0 0 0-1.635ZM17.45 8.721 14.597 5.7 9.82 10.76a.54.54 0 0 0-.137.27l-.536 2.84c-.07.37.239.696.588.622l2.682-.567a.492.492 0 0 0 .255-.145l4.778-5.06Z" clip-rule="evenodd" />
                         </svg>
-                        <span class="hidden md:inline font-medium">Print</span>
-                </button>
-            </div>
-
-            <!--Edit Buttom-->
-                <a asp-action="Edit" asp-route-householdNo="@Model.HouseholdNo" asp-route-Id="@Model.PatientRecord.Id" class="flex-shrink-0 inline-block  bg-yellow-300 hover:bg-yellow-100 text-white font-medium py-2 px-4 rounded-lg transition duration-300 ease-in-out text-sm w-28">
-                    <span class="hidden md:inline font-medium">Update</span>
-                </a>
-                <!--Create Button-->
-                <a asp-action="Create" asp-controller="VaccinationAppointment" asp-route-householdNo="@Model.HouseholdNo" asp-route-recordId="@Model.PatientRecord.Id" class="text-white bg-primary-50 font-medium rounded-lg transition duration-300 ease-in-out text-sm px-4 py-2 hover:bg-green-300 flex-shrink-0 inline-block  text-white font-medium" aria-label="New Appointment">
-                    <svg class="h-5 w-5 inline-block mr-1" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
-                    </svg>
-                    New Appointment
-                </a>
+                        Update
+                    </a>
+                    <button data-modal-target="popup-modal-2" data-member-id="@Model.PatientRecord.Id" data-modal-toggle="popup-modal-2" class="delete-btn px-5 py-2.5 text-sm font-medium text-center inline-flex items-center text-white bg-danger-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-red-100" type="button">
+                        <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                            <path fill-rule="evenodd" d="M8.586 2.586A2 2 0 0 1 10 2h4a2 2 0 0 1 2 2v2h3a1 1 0 1 1 0 2v12a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V8a1 1 0 0 1 0-2h3V4a2 2 0 0 1 .586-1.414ZM10 6h4V4h-4v2Zm1 4a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Zm4 0a1 1 0 1 0-2 0v8a1 1 0 1 0 2 0v-8Z" clip-rule="evenodd" />
+                        </svg>
+                        <span class="hidden md:inline font-medium">&nbsp; Delete</span>
+                    </button>
+                </div>
             </div>
         </div>
-
-
-
         <div>
-            <h4 class="text-2xl font-bold mb-2">Patient Record</h4>
             <hr class="mb-2" />
-            <dl class="grid grid-cols-1 md:grid-cols-2 gap-y-8 gap-x-8">
+            <dl class="grid grid-cols-1 md:grid-cols-2 gap-x-8 text-sm">
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Patient</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Name</dt>
                     <dd class="text-gray-900">@Html.DisplayFor(model => model.PatientRecord.Patient.FormattedFullName)</dd>
                 </div>
-
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Birthplace</dt>
-                    <dd class="text-gray-900">@Html.DisplayFor(model => model.PatientRecord.BirthPlace)</dd>
-                </div>
-
-                <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Mother's' Name</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Mother's Name</dt>
                     <dd class="text-gray-900">@Html.DisplayFor(model => model.PatientRecord.MotherName)</dd>
                 </div>
-
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Mother's' Age</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Birthday</dt>
+                    <dd class="text-gray-900">@Html.DisplayFor(model => model.PatientRecord.Patient.Birthday)</dd>
+                </div>
+                <div class="flex items-center pb-2">
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Mother's Age</dt>
                     <dd class="text-gray-900">@Html.DisplayFor(model => model.PatientRecord.MotherAge)</dd>
                 </div>
-
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Mother's' Birthdate</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Birthplace</dt>
+                    <dd class="text-gray-900">@Html.DisplayFor(model => model.PatientRecord.BirthPlace)</dd>
+                </div>
+                <div class="flex items-center pb-2">
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Mother's Birthday</dt>
                     <dd class="text-gray-900">@Html.DisplayFor(model => model.PatientRecord.MotherBirthday)</dd>
                 </div>
-
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Father's Name</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Sex</dt>
+                    <dd class="text-gray-900">@Html.DisplayFor(model => model.PatientRecord.Patient.Sex)</dd>
+                </div>
+                <div class="flex items-center pb-2">
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Father's Name</dt>
                     <dd class="text-gray-900">@Html.DisplayFor(model => model.PatientRecord.FatherName)</dd>
                 </div>
-
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Father's Age</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Address</dt>
+                    <dd class="text-gray-900">@Html.DisplayFor(model => model.PatientRecord.Patient.Household.FullAddress)</dd>
+                </div>
+                <div class="flex items-center pb-2">
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Father's Age</dt>
                     <dd class="text-gray-900">@Html.DisplayFor(model => model.PatientRecord.FatherAge)</dd>
                 </div>
-
+                <div></div>
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Father's Birthdate</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Father's Birthday</dt>
                     <dd class="text-gray-900">@Html.DisplayFor(model => model.PatientRecord.FatherBirthday)</dd>
                 </div>
-
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Contact Number</dt>
-                    <dd class="text-gray-900">@Html.DisplayFor(model => model.PatientRecord.ContactNumber)</dd>
-                </div>
-
-                <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Type of Delivery</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Type of Delivery</dt>
                     <dd class="text-gray-900">@Html.DisplayFor(model => model.PatientRecord.TypeOfDelivery)</dd>
                 </div>
-
                 <div class="flex items-center pb-2">
-                    <dt class="text-gray-600 font-semibold mr-10 flex-shrink-0 w-40">Attended</dt>
+                    <dt class="text-gray-800 font-semibold mr-10 flex-shrink-0 w-40">Attended</dt>
                     <dd class="text-gray-900">@Html.DisplayFor(model => model.PatientRecord.Attended)</dd>
-                </div>
+                </div>               
             </dl>
         </div>
         <hr class="mb-3" />
     </div>
-
+    <div class="flex justify-end mb-4">
+        <a asp-action="Create" asp-route-householdNo="@Model.HouseholdNo" asp-route-recordId="@Model.PatientRecord.Id" asp-controller="VaccinationAppointment" class="px-5 py-2.5 text-sm font-medium text-center inline-flex items-center text-white bg-primary-50 rounded-lg focus:ring-4 focus:outline-none focus:ring-green-200">
+            <svg class="w-6 h-6 text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+                <path fill-rule="evenodd" d="M11.32 6.176H5c-1.105 0-2 .949-2 2.118v10.588C3 20.052 3.895 21 5 21h11c1.105 0 2-.948 2-2.118v-7.75l-3.914 4.144A2.46 2.46 0 0 1 12.81 16l-2.681.568c-1.75.37-3.292-1.263-2.942-3.115l.536-2.839c.097-.512.335-.983.684-1.352l2.914-3.086Z" clip-rule="evenodd" />
+                <path fill-rule="evenodd" d="M19.846 4.318a2.148 2.148 0 0 0-.437-.692 2.014 2.014 0 0 0-.654-.463 1.92 1.92 0 0 0-1.544 0 2.014 2.014 0 0 0-.654.463l-.546.578 2.852 3.02.546-.579a2.14 2.14 0 0 0 .437-.692 2.244 2.244 0 0 0 0-1.635ZM17.45 8.721 14.597 5.7 9.82 10.76a.54.54 0 0 0-.137.27l-.536 2.84c-.07.37.239.696.588.622l2.682-.567a.492.492 0 0 0 .255-.145l4.778-5.06Z" clip-rule="evenodd" />
+            </svg>
+            New Appointment
+        </a>
+    </div>
     <div class="bg-white shadow-md rounded-lg p-8">
         <h5 class="text-2xl font-bold mb-2">Patient Appointments</h5>
 
         <div style="overflow:auto;">
-            <table class="table-auto w-full">
+            <table class="table-auto w-full text-sm">
                 <thead>
                     <tr class="bg-gray-200">
                         <th class="px-4 py-2 text-left">
@@ -159,7 +168,7 @@
                                 }
                             </td>
                             <!--Action Buttons-->
-                            <td class="border-b border-gray-100 px-4 py-2 inline-flex items-center text-center">
+                            <td class="border-b border-gray-100 px-4 py-2 inline-flex items-center text-center text-lg">
                                 <a asp-action="Details" asp-controller="VaccinationAppointment" asp-route-id="@appointment.Id" asp-route-householdNo="@Model.HouseholdNo" asp-route-requestUrl="@Model.RequestUrl" class="text-green-400 hover:text-green-500 mr-2">
                                     <i class="fas fa-eye"></i>
                                 </a>
@@ -181,9 +190,14 @@
                 </tbody>
             </table>
         </div>
-
-        <div class="flex justify-end mt-8">
-            <a asp-action="Index" class="focus:outline-none text-white bg-red-400 hover:bg-red-450 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Back to List</a>
-        </div>
+    </div>
+    <div class="flex justify-end mt-8">
+        <a asp-action="Index" asp-route-householdNo="@Model.HouseholdNo" class="focus:outline-none text-white bg-red-400 hover:bg-red-450 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Back to List</a>
     </div>
 </div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("Prints/_PrintDialogWithId");
+    }
+}
