--- a/AUF.EMR.MVC/Views/PregnancyTrackingHH/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/PregnancyTrackingHH/Edit.cshtml
@@ -89,7 +89,7 @@
             <input type="hidden" asp-for="PregnancyTrackingHH.HouseholdId" value="@Model.PregnancyTrackingHH.HouseholdId" />
             <input type="hidden" asp-for="HouseholdNo" value="@Model.HouseholdNo" />
             <div class="flex justify-end">
-                <a asp-action="Index" asp-controller="PregnancyTrackingHH" asp-route-householdNo="@Model.HouseholdNo" class="focus:outline-none text-white bg-red-400 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 hover:bg-red-450 !important">Back</a>
+                <a asp-action="Index" asp-controller="PregnancyTracking" asp-route-householdNo="@Model.HouseholdNo" class="focus:outline-none text-white bg-red-400 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 hover:bg-red-450 !important">Back</a>
                 <button type="submit" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Save</button>
             </div>
         </form>
