--- a/AUF.EMR.MVC/Views/VaccinationAppointment/Details.cshtml
+++ b/AUF.EMR.MVC/Views/VaccinationAppointment/Details.cshtml
@@ -79,8 +79,8 @@
             </dl>
         </div>
         <div class="flex justify-end mt-8">
-            <a asp-action="Edit" asp-route-id="@Model?.VaccinationAppointment.Id" asp-route-householdNo="Model.HouseholdNo" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 w-20 flex items-center justify-center">Edit</a>
-            <a asp-action="Index" class="focus:outline-none text-white bg-red-400 hover:bg-red-450 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Back to List</a>
+            <a asp-action="Edit" asp-route-id="@Model?.VaccinationAppointment.Id" asp-route-householdNo="@Model.HouseholdNo" class="focus:outline-none text-white bg-primary-50 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 w-20 flex items-center justify-center">Edit</a>
+            <a asp-action="Details" asp-controller="PatientRecord" asp-route-id="@Model.VaccinationAppointment.PatientRecordId" asp-route-householdNo="@Model.HouseholdNo" class="focus:outline-none text-white bg-red-400 hover:bg-red-450 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2">Back to List</a>
         </div>
    </div>
 </div>
