--- a/AUF.EMR.MVC/Views/WRA/Index.cshtml
+++ b/AUF.EMR.MVC/Views/WRA/Index.cshtml
@@ -172,31 +172,6 @@
                             <td class="border-b border-gray-100 px-4 py-2">
                                 @((item.IsFPModern.HasValue) ? (item.IsFPModern.Value ? "Modern" : "Traditional") : "")
                             </td>
-
-                            @*                  <td>
-                        @Html.DisplayFor(modelItem => item.ShiftToModern)
-                        </td>
-
-                        <td>
-                        @Html.DisplayFor(modelItem => item.IsMFPUnmet)
-                        </td>
-
-                        <td>
-                        @Html.DisplayFor(modelItem => item.AcceptModernFpMethod)
-                        </td>
-
-                        <td>
-                        @Html.DisplayFor(modelItem => item.ModernFPMethod)
-                        </td>
-
-                        <td>
-                        @Html.DisplayFor(modelItem => item.FPAcceptedDate)
-                        </td>
-
-                        <td class="border-b border-gray-100 px-2 py-2 text-left">
-                        @Html.DisplayFor(modelItem => item.Status)
-                        </td>*@
-
                             <td class="border-b border-gray-100 px-4 py-2 inline-flex items-center text-center text-lg">
                                 <a asp-action="Edit" asp-route-id="@item.Id" class="text-yellow-300 hover:text-yellow-400 mr-2"><i class="fas fa-edit"></i></a>
                                 <a asp-action="Details" asp-route-id="@item.Id" asp-route-householdNo="@Model.HouseholdNo" asp-route-requestUrl="@Model.RequestUrl" class="text-green-400 hover:text-green-500 mr-2"><i class="fas fa-eye"></i></a>
@@ -225,7 +200,7 @@
                     <svg class="mx-auto mb-4 text-gray-400 w-12 h-12 dark:text-gray-200" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 11V6m0 8h.01M19 10a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
                     </svg>
-                    <h3 class="mb-5 text-lg font-normal text-gray-500">Are you sure you want to delete this household member?</h3>
+                    <h3 class="mb-5 text-lg font-normal text-gray-500">Are you sure you want to delete this record?</h3>
                     <button data-modal-hide="popup-modal-2" type="button" class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">No, cancel</button>
                     <button data-modal-hide="popup-modal-2" type="submit" class="text-white bg-red-600 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm inline-flex items-center px-5 py-2.5 text-center">
                         Yes, I'm sure
