Revert back paginated list

--- a/AUF.EMR.MVC/Views/Barangay/Edit.cshtml
+++ b/AUF.EMR.MVC/Views/Barangay/Edit.cshtml
@@ -87,3 +87,9 @@
         </form>
     </div>
 </div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
+}
