--- a/AUF.EMR.MVC/Views/User/Index.cshtml
+++ b/AUF.EMR.MVC/Views/User/Index.cshtml
@@ -74,7 +74,7 @@
                         <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.ContactNo)</td>
                         <td class="border-b border-gray-100 px-4 py-2 text-left">@Html.DisplayFor(modelItem => item.Address)</td>
                         <!--Action Button-->
-                        <td class="border-b border-gray-100 px-4 py-2 text-left">
+                        <td class="border-b border-gray-100 px-4 py-2 text-left text-lg">
                             <a asp-action="Edit" asp-route-id="@item.Id" class="text-yellow-300 hover:text-yellow-400 mr-2">
                                 <i class="fas fa-edit"></i>
                             </a>
