--- a/AUF.EMR.MVC/Views/Error/Invalid.cshtml
+++ b/AUF.EMR.MVC/Views/Error/Invalid.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model string
+@{
     Layout = "Layouts/_HouseholdLayout";
 }
 
@@ -7,8 +8,9 @@
         <div class="mx-auto max-w-screen-sm text-center">
             <img class="w-40 mx-auto lg:mx-auto" src="~/img/warning.png" alt="">
             <p class="mt-4 mb-4 text-3xl tracking-tight font-bold md:text-4xl dark:text-white" style="color: #800000">Oops! Something went wrong.</p>
-            <p class="mb-4 text-lg font-light text-gray-500 dark:text-gray-400">Sorry, it seems like there's been an error.</p>
-            <a href="#" class="inline-flex font-medium rounded-lg text-sm px-5 py-2.5 text-center my-4" style="background-color: #ACCB8F; color: white;">Back to Homepage</a>
+            <p class="mb-4 text-lg font-light text-gray-500 dark:text-gray-400">Sorry, it seems like there's been an error: @Model</p>
+            <p></p>
+            <a asp-action="Index" asp-controller="Household" class="inline-flex font-medium rounded-lg text-sm px-5 py-2.5 text-center my-4" style="background-color: #ACCB8F; color: white;">Back to Homepage</a>
             <a href="#" class="inline-flex font-medium rounded-lg text-sm px-5 py-2.5 text-center my-4" style="background-color: #ACCB8F; color: white;">Contact Support</a>
         </div>
     </div>
